--- a/doc/main.tex
+++ b/doc/main.tex
@@ -22,6 +22,26 @@
 
 Here is the introduction of our text
 
+\section{Abstract}
+
+Here is the introduction of our text
+
+\section{Data set}
+
+Here is the introduction of our text
+
+\section{Preprosessing}
+
+Here is the introduction of our text
+
+\section{Transformer VIT}
+
+Here is the introduction of our text
+
+\section{Gan}
+
+Here is the introduction of our text
+
 \begin{itemize}
 
 \item One
