--- a/doc/main.tex
+++ b/doc/main.tex
@@ -38,7 +38,11 @@ Here is the introduction of our text
 
 Here is the introduction of our text
 
-\section{Gan}
+\section{Gan Gan}
+
+Here is the introduction of our text
+
+\section{Gan Gan}
 
 Here is the introduction of our text
 
