fixing gan model

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -18,15 +18,25 @@
 
 \maketitle
 
-\section{Introduction}
-
-Here is the introduction of our text
-
 \section{Abstract}
 
 Here is the introduction of our text
 
-\section{Data set}
+\section{Introduction}
+
+Here is the introduction of our text
+\subsection*{A. Goals}
+cccccc
+\subsection*{B. Significance}
+ggggg
+\subsection*{C. Paper Structure}
+
+\section{Background}
+\subsection*{A. GAN}
+\subsection*{B. Transformer VIT}
+\subsection{Data set}
+\subsection*{Models}
+\sus
 
 Here is the introduction of our text
 
