update gan model

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -28,15 +28,9 @@ Here is the introduction of our text
 \subsection*{A. Goals}
 cccccc
 \subsection*{B. Significance}
-ggggg
-\subsection*{C. Paper Structure}
 
-\section{Background}
-\subsection*{A. GAN}
-\subsection*{B. Transformer VIT}
-\subsection{Data set}
-\subsection*{Models}
-\sus
+
+\section{Data set}
 
 Here is the introduction of our text
 
