--- a/doc/main.tex
+++ b/doc/main.tex
@@ -13,7 +13,8 @@
 \usepackage[nottoc]{tocbibind}
 \setlength{\columnsep}{1cm}
 \title{Improving of identifying whether mushrooms are poisonous or edible using EfficientNet B0}
-\author{ Anub, Viktoria, and Harith Elamin \\ Oslomet, Norway}
+\author{ Anup Budhathoki, Viktoria Huszar, and Harith Elamin}
+\affil{Department of Computer Science, Oslo metropolitan university, Norway}
 \date{May 2024}
 
 \begin{document}
