--- a/doc/sections/abstract.tex
+++ b/doc/sections/abstract.tex
@@ -1,1 +1,6 @@
-//Viktoria
+ This research aims to find out how could modern advanced machine learning architecture improve AlexNet model in classification of Poisonous and Edible Mushrooms. The background of this project is a paper titled as "A New Deep Learning Model for the Classification of Poisonous and Edible Mushrooms Based on Improved AlexNet Convolutional Neural Network"[2]. This paper presented a deep learning model for classifying poisonous and edible mushrooms. Thu auther precented an improved version of the AlexNet convolutional neural network architecture. However, despite the limitations of the data set, the author showed the experimental results that show that the proposed model can accurately classify edible and poisonous mushrooms and can shorten training and testing times. In this research, we have explained the reason for improving the AlexNet model to EfficientNetB0 model. We tuned the model parameters to significantly improve performance. We also used techniques such as random search, or default optimization in finding the optimal hyperparameters, and then have evaluated the model performance using cross-validation techniques to ensure the model's generalization ability and reliability. EfficientNet B0 model with 0.0001 learning rate, and with four dense layers and dropout in the test dataset with 90% accuracy.
+\hfill \break
+
+\textbf{Keywords:} 
+EfficientNetB0; convolutional neural network; deep learning; mushroom;
+ 
