--- a/doc/sections/conclusion.tex
+++ b/doc/sections/conclusion.tex
@@ -1,1 +1,2 @@
-Harith
+Our experiment shows that the EfficientNet  model  was trained on Kegal dataset with 100 southand images, devied into tow classess. Replacing the Convolutional Layers with more efficient building blocks such as depthwise separable convolutions, help the model to work with a better performance. 
+
