--- a/doc/sections/future-works.tex
+++ b/doc/sections/future-works.tex
@@ -1,1 +1,7 @@
-For future work on this topic, we encourage someone
+For future work on this project, we encourage someone to replac more convolutional Layers with more efficient building blocks such as depthwise separable convolutions in order to improve the the performance. use a differente hyperparameters to adjust the depthwise layer, and using a smaller number of  weights to increasse the accurancey.
+
+However, using generative adversarial networks to generate more fungal image datasets will overcome the data limitations of this research and will contribute to improving the quality and diversity of the training data, ultimately enhancing performance.
+
+
+
+
