--- a/doc/sections/results.tex
+++ b/doc/sections/results.tex
@@ -1,9 +1,13 @@
-This sections shows the results of the experiments explained
- in Section xxxxx. First, the results of training the source models
- will be shown, followed by the results from the transfer
- learning experiments.
+This section shows the results of the experiment explained. First, the results of training the source models  will be shown, followed by the results from the transfer
+learning experiments.
 
- /subsection{ A. Source Models}
- The best results from training the source models can be
+\subsection{Classification}
+\centering
+\includegraphics[width=.5\textwidth]{figures/classification.PNG}
+\hfill \break
+
+
+\subsection{Evaluation}
+The best results from training the source models can be
  seen in Fig. xxx. 
  
