--- a/doc/sections/references.tex
+++ b/doc/sections/references.tex
@@ -1,2 +1,8 @@
 [1] A. Krizhevsky, G. Hinton, et al., “Learning multiple layers of features
 from tiny images,” 2009.
+\hfill \break
+[2] Ketwongsa, W.; Boonlue, S.; Kokaew, U. A New Deep Learning Model for the Classification of Poisonous and Edible Mushrooms Based on Improved AlexNet Convolutional Neural Network. Appl. Sci. 2022, 12, 3409. https://doi.org/10.3390/app12073409.
+\hfill \break
+[3]  Ul Haq, Husni Fadhilah Dhiya et al. “EfficientNet Optimization on Heartbeats Sound Classification.” 2021 5th International Conference on Informatics and Computational Sciences (ICICoS) (2021): 216-221.
+\hfill \break
+[4] J. Gui, Z. Sun, Y. Wen, D. Tao and J. Ye, "A Review on Generative Adversarial Networks: Algorithms, Theory, and Applications," in IEEE Transactions on Knowledge and Data Engineering, vol. 35, no. 4, pp. 3313-3332, 1 April 2023, doi: 10.1109/TKDE.2021.3130191.
