update the result in latex

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -6,11 +6,13 @@
 \usepackage{hyperref}
 \usepackage{amsmath, xparse}
 \usepackage{tabularx}
-\usepackage{graphicx}
+\usepackage{caption}
 \usepackage{comment}
 \usepackage{import}
-\graphicspath{ {./figures/} }
 \usepackage[nottoc]{tocbibind}
+\usepackage{float}
+\usepackage{graphicx}
+\graphicspath{{images/}}
 \setlength{\columnsep}{1cm}
 \usepackage[left=2.5cm,right=2.5cm,top=2cm,bottom=1.5cm]{geometry}
 \title{Improving of identifying whether mushrooms are poisonous or edible using EfficientNet B0}
