--- a/doc/sections/related-work.tex
+++ b/doc/sections/related-work.tex
@@ -1,7 +1,17 @@
-3.1. Convolutional Neural Network (CNN)
+3.1. EfficientNet B0
+\hfill \break
+EfficientNet architecture consists of seven blocks which are shown in different colours. The basic building block of EfficientNet-B0 is a mobile inverted bottleneck convolution (MBConv), while each MBConv block is shown with the corresponding kernel filter size [6]. The figure below shows the different block
+
+\centering
+\includegraphics[width=.5\textwidth]{EfficientNet.PNG}
+\hfill \break
 
 
-3.2. EfficientNet B0
 
-xxxx[3]
-3.3. Convolutional Neural Network (CNN)
+
+
+
+
+3.2 Convolutional Neural Network (CNN)
+
+
