update latex files

--- a/doc/sections/references.tex
+++ b/doc/sections/references.tex
@@ -8,3 +8,4 @@ from tiny images,” 2009.
 [4] J. Gui, Z. Sun, Y. Wen, D. Tao and J. Ye, "A Review on Generative Adversarial Networks: Algorithms, Theory, and Applications," in IEEE Transactions on Knowledge and Data Engineering, vol. 35, no. 4, pp. 3313-3332, 1 April 2023, doi: 10.1109/TKDE.2021.3130191.
 [5] Ahdi, Moh, and Sjamsuri, Khalid, and Kunaefi, Anang, and  Nugroho, Bayu, and Yusuf, Ahmad. (2023). Convolutional Neural Network (CNN) EfficientNet-B0 Model Architecture for Paddy Diseases Classification. 105-110. 10.1109/ICTS58770.2023.10330828. 
 [6] Zhou, Aihua, and Ma, Yujun, and Ji, Wanting, and Zong, Ming, and Yang, Pei, and Wu, Min, and Liu, Mingzhe. (2022). Multi-head attention-based two-stream EfficientNet for action recognition. Multimedia Systems. 29. 1-12. 10.1007/s00530-022-00961-3. 
+[7] happiestminds original website, https://www.happiestminds.com/insights/convolutional-neural-networks-cnns
