--- a/doc/main.tex
+++ b/doc/main.tex
@@ -15,7 +15,7 @@
 \graphicspath{{images/}}
 \setlength{\columnsep}{1cm}
 \usepackage[left=2.5cm,right=2.5cm,top=2cm,bottom=1.5cm]{geometry}
-\title{Improving of identifying whether mushrooms are poisonous or edible using EfficientNet B0}
+\title{How to improve the detection of whether mushrooms are poisonous or edible with EfficientNet B0}
 \author{ Anup Budhathoki, Viktoria Huszar, and Harith Elamin}
 \affil{Department of Computer Science, Oslo metropolitan university, Norway}
 \date{May 2024}
